# create-vara-app

./: .gitignore  CLAUDE.md  FEEDBACK.md  README.md  TODOS.md
create-vara-app/: README.md  index.mjs  package.json
create-vara-app/template/frontend/: .env.example  vite.config.ts
create-vara-app/template/frontend/src/: App.tsx  index.css  vite-env.d.ts
create-vara-app/template/frontend/src/components/: ActionsPanel.tsx  CopyAddress.tsx  DebugPanel.tsx  EventLog.tsx  NetworkSelector.tsx  StatePanel.tsx  WalletModal.tsx
create-vara-app/template/frontend/src/hooks/: use-sails.ts
create-vara-app/template/frontend/src/lib/: idl-introspect.ts  sails-client.ts
create-vara-app/template/frontend/src/providers/: chain-provider.tsx  events-provider.tsx
create-vara-app/template/scripts/: scaffold-client.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: scaffold.test.ts
frontend/src/__tests__/hooks/: session-provider.test.ts  signless-flow.test.ts  use-send-transaction.test.ts  use-session.test.ts  use-voucher.test.ts
frontend/src/assets/: demo.idl
frontend/src/components/: ActionsPanel.tsx  DebugPanel.tsx  EventLog.tsx  Header.tsx  ManualCallTab.tsx  NetworkSelector.tsx  SessionPanel.tsx  StatePanel.tsx  TypedInput.tsx  VoucherBadge.tsx  WalletModal.tsx
frontend/src/hooks/: use-send-transaction.ts  use-session.ts  use-voucher.ts
frontend/src/lib/: block-time.ts  sails-client.ts  wallet.ts
frontend/src/providers/: chain-provider.tsx  events-provider.tsx  session-provider.tsx
programs/demo/: Cargo.toml  README.md  build.rs  demo.idl  demo.stable.idl
programs/demo/.github/workflows/: ci.yml
programs/demo/app/: Cargo.toml
programs/demo/app/src/: lib.rs
programs/demo/client/: Cargo.toml  build.rs  demo_client.idl
programs/demo/client/src/: demo_client.rs  lib.rs
programs/demo/src/: lib.rs
programs/demo/tests/: gtest.rs
scripts/: build.sh  scaffold-client.ts  scaffold-types.ts
